--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,9 +1,11 @@
-en:
-  button_kanbanery_push: "Push to Kanbanery"
+ru:
+  button_kanbanery_push: "Зафигачить  Kanbanery"
   kanbanery_settings_label_api_key: "Kanbanery API key"
   kanbanery_settings_label_workspace: "Kanbanery Workspace"
   kanbanery_settings_label_workspace_help: "The name of the workspace in kanbanery that owns the project specified below"
   kanbanery_settings_label_project: "Kanbanery Project ID"
   kanbanery_settings_label_project_help: "The project id in kanbanery that you want to push issues to"
+  kanbanery_settings_label_update: "Задача обновлена в Kanbanery"
+  kanbanery_settings_label_push: "Задача отправлена в Kanbanery"
   kanbanery_settings_label_authtoken: "Kanbanery auth. token"
-  kanbanery_settings_label_token_help: ""
+  kanbanery_settings_label_token_help: "Для авторизации запросов от Kanbanery"
