--- a/README.rdoc
+++ b/README.rdoc
@@ -3,7 +3,8 @@
 Плагин к redmine  для синхронизации с kanbanery (http://kanbanery.com)
 
 == Возможности
-Синхронизуируются движения тикетов по статусам и по ответственным.
+- Экспорт задач из redmine в kanbanery
+- Синхронизация статусов и ответственных между kanbanery и redmine
 
 == Установка
 Выполнить:
@@ -13,7 +14,7 @@
 
 В настройках kanbanery прописать url для "live update": {redmine host}/kanbanery/update
 
-В redmine настроках плагина заполнить нужные поля.
+В redmine настройках плагина заполнить нужные поля.
 
 Названия колонок в kanbanery должны совпадать со статусам в redmine.
 
