--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -9,4 +9,5 @@ ru:
   kanbanery_settings_label_push: "Задача отправлена в Kanbanery"
   kanbanery_settings_label_authtoken: "Kanbanery auth. token"
   kanbanery_settings_label_token_help: "Для авторизации запросов от Kanbanery"
-  kanbanery_settings_label_closed_status: ""
+  kanbanery_settings_label_closed_status: "Статус для архивных тасков"
+  kanbanery_settings_label_closed_status_help: ""
