еще одно поле для auth токена

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,6 +6,7 @@ en:
   kanbanery_settings_label_project: "Kanbanery Project ID"
   kanbanery_settings_label_project_help: "The project id in kanbanery that you want to push issues to"
   kanbanery_settings_label_authtoken: "Kanbanery auth. token"
+  kanbanery_settings_label_authtoken_2: "Kanbanery auth. token No2"
   kanbanery_settings_label_token_help: ""
   kanbanery_settings_label_closed_status: "Redmine status for archive tasks/issues"
   kanbanery_settings_label_closed_status_help: "status name"
