--- a/README.rdoc
+++ b/README.rdoc
@@ -25,7 +25,7 @@ Users should have same emails in redmine and kanbanery
 
 == Установка
 Выполнить:
-  $ cd redmine/vendor/plugins 
+  $ cd redmine/plugins 
   $ git clone https://github.com/webgeist/redmine_kanbanery.git
   $ rake db:migrate:plugins PLUGIN=redmine_kanbanery
 
