--- a/README.rdoc
+++ b/README.rdoc
@@ -11,13 +11,13 @@ Run:
   $ git clone https://github.com/webgeist/redmine_kanbanery.git
   $ rake db:migrate:plugins PLUGIN=redmine_kanbanery
 
-Kanbanery -> Settings -> URL Live Update: {redmine host}/kanbanery/update
+Kanbanery -> Settings -> URL Live Update: {redmine host}/kanbanery/update.
 
-Fill required fields in plugins settings in redmine
+Fill required fields in plugins settings in redmine.
 
-Column names should match with issue statuses  
+Column names should match with issue statuses.
 
-Users should have same emails in redmine and kanbanery
+Users should have same emails in redmine and kanbanery.
 
 
 == Возможности
@@ -31,10 +31,10 @@ Users should have same emails in redmine and kanbanery
   $ git clone https://github.com/webgeist/redmine_kanbanery.git
   $ rake db:migrate:plugins PLUGIN=redmine_kanbanery
 
-В настройках kanbanery прописать url для "live update": {redmine host}/kanbanery/update
+В настройках kanbanery прописать url для "live update": {redmine host}/kanbanery/update.
 
-В redmine настройках плагина заполнить нужные поля
+В redmine настройках плагина заполнить нужные поля.
 
-Названия колонок в kanbanery должны совпадать со статусам в redmine
+Названия колонок в kanbanery должны совпадать со статусам в redmine.
 
-Пользователи в kanbanery и в redmine должны иметь одинаковые email'ы
+Пользователи в kanbanery и в redmine должны иметь одинаковые email'ы.
